test/Fail/UselessPrivateImport.agda
{-# OPTIONS --warning=error #-}

module UselessPrivateImport where

private
  open import Common.Prelude
